Fixed spacing

--- a/js-chess/index.css
+++ b/js-chess/index.css
@@ -16,15 +16,15 @@ body {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: auto;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 100px 50px;
     width: 100%;
+    max-width: calc(100% - 2 * 50px);
     aspect-ratio: 2 / 1;
 }
 
 .chess-notation-container {
     display: grid;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 6fr 1fr;
     grid-auto-flow: rows;
     overflow: hidden;
     padding: 10px;
@@ -53,6 +53,10 @@ body {
     grid-auto-flow: rows;
     column-gap: 10px;
     row-gap: 10px;
+}
+
+.chess-buttons button {
+    height: 100%;
 }
 
 .chess-board {
